Se creo los Responses correspondientes, definidos anteriormente en el openapi.yml, partiendo por la entidad y repositorio de Usuario, usando Repository Pattern para no disponibilizar todos los metodos de JPA.
Se crea un General/Global Exception Handler para manejar Excepciones propias de spring (Jakarta Validations) y de Negocio (BaseApiException) por herencia podemos gatillas multiples excepciones de negocio y atajarlas en 1 solo handler.

Se implementaron las funciones basicas del provider de JWT, para obtener claims, crear la firma entre otras cosas.

Se configuro Spring security a su estado simple, aplicando cors, deshabilitando csrf, quitando las sessions de spring y bloqueando ciertas rutas, definidas en el openapi.yml.
